--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@clr/icons": "^3.1.4",
     "@clr/ui": "^3.1.4",
     "@webcomponents/webcomponentsjs": "^2.4.3",
+    "angular-mydatepicker": "^0.11.5",
     "lodash": "^4.17.15",
     "moment": "^2.27.0",
     "numeral": "^2.0.6",
