--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "@clr/ui": "^3.1.4",
     "@webcomponents/webcomponentsjs": "^2.4.3",
     "angular-mydatepicker": "^0.11.5",
-    "lodash": "^4.17.15",
-    "moment": "^2.27.0",
+    "fix": "0.0.6",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "numeral": "^2.0.6",
     "rxjs": "^6.5.5",
-    "sweetalert2": "^9.15.1",
+    "sweetalert2": "^9.17.2",
     "tslib": "^1.13.0",
     "zone.js": "^0.10.3"
   },
